Mon Apr 28 14:43:56 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * MDE/GME/naomi/GNC.mpc:
        * MDE/GME/naomi/GNC_App.h:
        * MDE/GME/naomi/GNC_App.cpp:
        
          . Implemented support for generating the interface file for a
            model using the GME's Naomi connector.

Thu Apr 24 18:45:29 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * MDE/GME/naomi/gnc.mwc:

          The stand-alone workspace build the dynamic version by default
          unless the -static flag is specified on the commandline.

        * MDE/GME/paradigms/PICML/be/BE_Assembly_Generator.cpp:

          Bug fix where the event type of a delegated event source was
          not set in the proxy assembly.

Thu Apr 24 16:08:32 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * MDE/GME/naomi/gnc.mwc:

          Workspace for building the static version of the connector.

Wed Apr 23 23:12:07 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * MDE/GME/paradigms/PICML/interpreter/Main_Dialog.cpp:
        * cuts/utils/Node_Daemon/Node_Daemon_Server.cpp:

          Added the missing 'reader' scope for the XSC top-level reader
          functions.

Wed Apr 23 22:55:15 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * MDE/GME/naomi/GNC_App.cpp:

          Now the connector will validate the owner of the attribute
          against the paradign name. This is to ensure the model
          owns the attribute.

Wed Apr 23 22:22:19 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * MDE/GME/naomi/GNC.cpp:

          File was missing from the repo.

        * MDE/GME/naomi/GNC_App.h:
        * MDE/GME/naomi/GNC_App.cpp:

          Now is it possible to write simple attributes to XML files.

Wed Apr 23 19:21:14 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * MDE/GME/naomi:
        * MDE/GME/naomi/GNC.mpc:
        * MDE/GME/naomi/GNC_App.h:
        * MDE/GME/naomi/GNC_App.cpp: